# codegraph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.org.md  justfile
__tests__/: node-version-check.test.ts  resolution.test.ts
crates/codegraph/: Cargo.toml
crates/codegraph/assets/: cgz-skill.md
crates/codegraph/src/: config.rs  db.rs  extraction.rs  graph.rs  installer.rs  lib.rs  main.rs  mcp.rs  types.rs  watcher.rs
crates/codegraph/tests/: agent_context_eval.rs  cli_ux.rs  files_output.rs  framework_routes.rs  graph_traversal.rs  installer_integration.rs  mcp_smoke.rs  moonbit_extraction.rs  moonbit_routes.rs  oracle_parity.rs  original_fixture_parity.rs  skills_command.rs  sync_incremental.rs  watcher_smoke.rs
crates/codegraph/tests/support/: mod.rs
docs/: AGENT_CONTEXT_EVAL.md  AGENT_WORKFLOW.md  PORT_PARITY_MATRIX.md
issues/: 2026-05-16T111206-spec-add-first-class-agent-workflow-guidance-for-cgz.md  2026-05-16T112324-enhance-return-useful-context-for-natural-language-cgz-context-queries.md  2026-05-16T112325-enhance-moonbit-affected-tests-from-import-dependents.md  2026-05-16T145233-bug-rust-affected-misses-tokio-spawn-tests.md  2026-05-17T000001-spec-roadmap-port-original-codegraph-to-cgz.md  2026-05-17T000002-docs-update-agents-for-rust-cgz.md  2026-05-17T000003-spec-define-port-parity-matrix.md  2026-05-17T000004-enhance-add-original-fixture-test-harness.md  2026-05-17T000005-enhance-improve-language-extractor-registry.md  2026-05-17T000006-enhance-port-typescript-javascript-extraction.md  (+19 more)
(+31 files in other folders)
