[package]
name = "cgz"
version = "2026.5.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Local-first semantic code intelligence graph"

[lib]
name = "codegraph"
path = "src/lib.rs"

[[bin]]
name = "cgz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
parking_lot = "0.12"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tree-sitter = "0.26.8"
tree-sitter-moonbit = { package = "octorus-tree-sitter-moonbit", version = "0.1.0" }
tree-sitter-rust = "0.24.2"
walkdir = "2.5"
notify = "6"

[dev-dependencies]
tempfile = "3.13"
